<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Heading"
        android:textAlignment="center"
        android:textSize="30sp">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100dp"
        android:weightSum="3">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:textSize="20sp">

        </TextView>

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="2"
            android:hint="@string/edit_user_name"
            android:inputType="text">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/roll_number"
            android:textAlignment="center"
            android:textSize="20sp">

        </TextView>


        <EditText
            android:id="@+id/rollnumber"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:hint="@string/edit_roll_number"
            android:layout_marginEnd="30dp"
            android:inputType="number"
            >

        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/button_text"
        android:layout_gravity="center">

    </Button>


</LinearLayout>
